fix:avoid Maven startup race in backend dev script